<resources>
    <string name="app_name">Gestion MultiServicios</string>
    <string name="inicio_de_sesi_n">Inicio De Sesión</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="bienvenida_login">BIENVENIDO A GESTIÓN MULTISERVICIO</string>
    <string name="api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA46tVyJt-4sCBs5HCH6OkqAzn_pocoGc4</string>
</resources>